@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<root>
+  <!-- This comment should not be included in the digest. -->
+  <ds:Signature xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+    <ds:SignedInfo>
+      <ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/>
+      <ds:SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/>
+      <ds:Reference URI="">
+        <ds:Transforms>
+          <ds:Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature"/>
+          <ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#WithComments"/>
+        </ds:Transforms>
+        <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
+        <ds:DigestValue>VOlGy2xKzFct21MMq/4z5RGFRv8=</ds:DigestValue>
+      </ds:Reference>
+    </ds:SignedInfo>
+    <ds:SignatureValue>eeDTlYLdUn6SSWCcCi/AX3N2pPN2ZXYgV9NFAFuhwqU+Gua57XwjBHSvJKZomVuw
+aDKkAYhDHXLJqzmdr5S9pXMkCnAUW1kLSj45Y6MQQLZr1dub//9JjKAXmORT6PSc
+2xmV1LAwVFs03C1APSAFPnrS+t2U3CSB/3U0AvKIgi54bVDkMz5hapHpyJOaMXcS
+qpszkuhGAsKzuFAGO7Nd3LvMdamm0Q3D+2glDNrEweKOecxJLOtvNV6PF1eEmOwy
+cGZlmEbU7VaRx+t7tXcNbK3my91VW3wDzj7zRQ+DZBM38l5/gh62nzgSinJqRrKf
+Hwu2acE4NrJGQ5U3wwD2WQ==</ds:SignatureValue>
+  </ds:Signature>
+  <!-- Neither should this comment be included. -->
+  <childnode>
+    sometext
+    <!-- Nor this comment. -->
+  </childnode>
+</root>
