@@ -14,6 +14,8 @@ Features:
 
 Bug Fixes:
 - Change split() to explode() as split is now depreciated
+- ds:References using empty or simple URI Id reference should never include 
+  comments in canonicalized data.
 
 11 Jan 2010, 1.2.2
 Features:
